--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">🌾</span>
-                <span class="logo-text">AgriConnect</span>
+                <span class="logo-text">AgriSustain</span>
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#government" class="nav-link">Resources</a></li>
                 <li><a href="#community" class="nav-link">Community</a></li>
-                <li><a href="#marketplace" class="nav-link">Marketplace</a></li>
+                <li><a href="marketplace.html" class="nav-link">Marketplace</a></li>
                 <li><a href="#insights" class="nav-link">Live Insights</a></li>
                 <li><a href="#export" class="nav-link">Export Info</a></li>
                 <li><a href="#health" class="nav-link">Health</a></li>
@@ -51,8 +51,8 @@
             <p class="hero-subtitle">Empowering farmers with knowledge, resources, and community for organic,
                 sustainable agriculture</p>
             <div class="hero-buttons">
-                <a href="#education" class="btn btn-primary">Get Started</a>
-                <a href="#insights" class="btn btn-secondary">Live Insights</a>
+                <a href="marketplace.html" class="btn btn-primary">🛒 Visit Marketplace</a>
+                <a href="#education" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -313,22 +313,56 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-icon">🛒</span>
-                <h2 class="section-title">Agricultural Marketplace</h2>
-                <p class="section-subtitle">Buy and sell agricultural products through trusted platforms</p>
+                <h2 class="section-title">AgriSustain Marketplace</h2>
+                <p class="section-subtitle">Direct connection between farmers and vendors - No intermediaries, fair
+                    prices</p>
             </div>
 
+            <!-- Featured Marketplace CTA -->
+            <div class="marketplace-feature"
+                style="background: linear-gradient(135deg, rgba(74, 124, 47, 0.3), rgba(45, 80, 22, 0.3)); border: 2px solid var(--accent-gold); border-radius: 20px; padding: 3rem; text-align: center; margin-bottom: 3rem;">
+                <div style="font-size: 4rem; margin-bottom: 1rem;">🌾💰🏪</div>
+                <h3 style="color: var(--accent-gold); font-size: 2rem; margin-bottom: 1rem;">Our Custom Marketplace
+                    Platform</h3>
+                <p
+                    style="font-size: 1.2rem; margin-bottom: 2rem; max-width: 700px; margin-left: auto; margin-right: auto;">
+                    Sell your crops directly to vendors or buy fresh produce from verified farmers. Transparent pricing,
+                    no commission fees!</p>
+                <div style="display: flex; gap: 2rem; justify-content: center; flex-wrap: wrap; margin-bottom: 2rem;">
+                    <div style="text-align: center;">
+                        <div style="font-size: 2.5rem; font-weight: 700; color: var(--accent-gold);">250+</div>
+                        <div style="color: var(--text-secondary);">Active Farmers</div>
+                    </div>
+                    <div style="text-align: center;">
+                        <div style="font-size: 2.5rem; font-weight: 700; color: var(--accent-gold);">180+</div>
+                        <div style="color: var(--text-secondary);">Verified Vendors</div>
+                    </div>
+                    <div style="text-align: center;">
+                        <div style="font-size: 2.5rem; font-weight: 700; color: var(--accent-gold);">500+</div>
+                        <div style="color: var(--text-secondary);">Products Available</div>
+                    </div>
+                </div>
+                <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
+                    <a href="marketplace.html" class="btn btn-primary"
+                        style="font-size: 1.2rem; padding: 1rem 2.5rem;">👨‍🌾 I'm a Farmer - Sell Crops</a>
+                    <a href="marketplace.html" class="btn btn-secondary"
+                        style="font-size: 1.2rem; padding: 1rem 2.5rem;">🏪 I'm a Vendor - Buy Crops</a>
+                </div>
+            </div>
+
+            <h3 style="text-align: center; color: var(--accent-gold); margin-bottom: 2rem;">External Resources</h3>
             <div class="marketplace-grid">
                 <div class="marketplace-card">
-                    <div class="marketplace-icon">🌾</div>
-                    <h3>Sell Your Produce</h3>
-                    <p>Connect with buyers across the country and get fair prices for your crops</p>
+                    <div class="marketplace-icon">📊</div>
+                    <h3>Market Prices</h3>
+                    <p>Stay updated with live government market prices and make informed decisions</p>
                     <div class="platform-links">
-                        <a href="https://enam.gov.in/" target="_blank" class="platform-btn">
-                            <span>eNAM Platform</span>
+                        <a href="https://www.agmarknet.gov.in/" target="_blank" class="platform-btn">
+                            <span>Live Market Rates</span>
                             <span class="external-icon">↗</span>
                         </a>
-                        <a href="https://www.agmarknet.gov.in/" target="_blank" class="platform-btn">
-                            <span>AgMarkNet</span>
+                        <a href="https://enam.gov.in/web/dashboard/trade-data" target="_blank" class="platform-btn">
+                            <span>eNAM Analytics</span>
                             <span class="external-icon">↗</span>
                         </a>
                     </div>
@@ -336,8 +370,8 @@
 
                 <div class="marketplace-card">
                     <div class="marketplace-icon">🛍️</div>
-                    <h3>Buy Farm Supplies</h3>
-                    <p>Purchase organic inputs, seeds, equipment, and tools from verified sellers</p>
+                    <h3>Farm Supplies</h3>
+                    <p>Purchase organic inputs, seeds, equipment from verified suppliers</p>
                     <div class="platform-links">
                         <a href="https://www.bighaat.com/" target="_blank" class="platform-btn">
                             <span>BigHaat</span>
@@ -351,42 +385,20 @@
                 </div>
 
                 <div class="marketplace-card">
-                    <div class="marketplace-icon">📊</div>
-                    <h3>Market Prices</h3>
-                    <p>Stay updated with live market prices and make informed selling decisions</p>
-                    <div class="platform-links">
-                        <a href="https://www.agmarknet.gov.in/" target="_blank" class="platform-btn">
-                            <span>Live Market Rates</span>
-                            <span class="external-icon">↗</span>
-                        </a>
-                        <a href="https://enam.gov.in/web/dashboard/trade-data" target="_blank" class="platform-btn">
-                            <span>Trade Analytics</span>
-                            <span class="external-icon">↗</span>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="marketplace-card">
                     <div class="marketplace-icon">🤝</div>
-                    <h3>Direct B2B Trading</h3>
-                    <p>Connect directly with wholesalers, retailers, and export companies</p>
+                    <h3>Additional Resources</h3>
+                    <p>Connect with wholesalers and explore other trading platforms</p>
                     <div class="platform-links">
                         <a href="https://www.indiamart.com/agriculture/" target="_blank" class="platform-btn">
                             <span>IndiaMART Agri</span>
                             <span class="external-icon">↗</span>
                         </a>
-                        <a href="https://www.tradeindia.com/agriculture/" target="_blank" class="platform-btn">
-                            <span>TradeIndia</span>
+                        <a href="https://enam.gov.in/" target="_blank" class="platform-btn">
+                            <span>eNAM Platform</span>
                             <span class="external-icon">↗</span>
                         </a>
                     </div>
                 </div>
-            </div>
-
-            <div class="marketplace-note">
-                <div class="note-icon">ℹ️</div>
-                <p>All marketplace links redirect to trusted, established platforms. Always verify seller credentials
-                    and read reviews before making transactions.</p>
             </div>
         </div>
     </section>
@@ -704,7 +716,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>AgriConnect</h3>
+                    <h3>AgriSustain</h3>
                     <p>Empowering farmers for a sustainable, organic future</p>
                 </div>
                 <div class="footer-section">
@@ -721,7 +733,7 @@
                     <ul class="footer-links">
                         <li><a href="#export">Export Info</a></li>
                         <li><a href="#health">Health Impact</a></li>
-                        <li><a href="#marketplace">Marketplace</a></li>
+                        <li><a href="marketplace.html">Marketplace</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -731,7 +743,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 AgriConnect. Built with ❤️ for farmers. All rights reserved.</p>
+                <p>&copy; 2026 AgriSustain. Built with ❤️ for farmers. All rights reserved.</p>
             </div>
         </div>
     </footer>
